Fixed jumping of column borders in board page

--- a/frontend/src/app/components/tasque-board/tasque-board.component.sass
+++ b/frontend/src/app/components/tasque-board/tasque-board.component.sass
@@ -74,7 +74,6 @@
     flex-direction: column
     justify-content: space-between
     align-items: center
-    border-bottom: 1px solid colorscheme(gray-300)
 
 .column
     display: flex
